# evaluation-registry

./: .gitignore  Makefile  Procfile  README.md  diff.txt  docker-compose.yml  evaluation-registry  manage.py  manifest.yml  pyproject.toml  requirements-dev.txt  requirements.txt  settings.py
.ebextensions/: 01_django.config  02_nginx.config  03_waf.config
.elasticbeanstalk/: config.yml
.github/workflows/: checks.yml  release-prod.yaml  release.yaml
docker/tests/: Dockerfile  start.sh
docker/web/: Dockerfile  entrypoint.sh  start.sh
envs/: tests  web
evaluation_registry/: allowed_domains.py  asgi.py  custom_password_validators.py  hosting_environment.py  jinja2.py  settings.py  settings_base.py  urls.py  wsgi.py
evaluation_registry/evaluations/: admin.py  apps.py  authentication_views.py  auto_fill.py  constants.py  decorators.py  email_handler.py  evaluation_generator.py  factories.py  filters.py  forms.py  info_views.py  models.py  share_views.py  views.py
evaluation_registry/evaluations/management/commands/: assign_superuser_status.py  create_users.py  generate_erd.py  load_rsm_csv.py  load_rsm_json.py  reformat_description.py  update_evaluation_types.py
evaluation_registry/evaluations/migrations/: 0001_initial.py  0002_auto_20231025_1709.py  0002_auto_20231026_0848.py  0002_department_evaluation_evaluationtype_eventdate_and_more.py  0002_department_evaluation_eventdate.py  0002_populate_departments.py  0002_populate_reference_data.py  0003_auto_20231026_1353.py  0003_evaluation_evaluation_types.py  0003_evaluationdesigntype_and_more.py  0003_logintoken.py  0003_rsmfile.py  0003_user_invite_accepted_at_user_invited_at_and_more.py  0004_pdfevaluationfile.py  0004_populate_designtype.py  0004_remove_evaluation_other_reasons_unpublished_description_and_more.py  0004_update_evaluation_types.py  0005_alter_evaluation_title.py  0005_evaluation_reasons_unpublished_details_and_more.py  0005_historicalevaluation.py  0005_remove_evaluation_is_economic_type_and_more.py  0005_rsmfile.py  0006_alter_evaluation_title_and_more.py  0006_evaluation_cost_historicalevaluation_cost.py  0006_evaluation_economic_types_evaluation_generic_types_and_more.py  0006_evaluation_policies.py  0006_historicalevaluation.py  0007_alter_evaluation_title_and_more.py  0007_alter_evaluation_visibility_and_more.py  0007_autogeneratedevaluation.py  0007_evaluation_cost_historicalevaluation_cost.py  0007_evaluation_has_grant_number_and_more.py  0007_evaluation_report_title_evaluation_rsm_report_id_and_more.py  0007_evaluationdesigntype_and_more.py  0007_evaluationfile.py  0007_remove_evaluation_other_reasons_unpublished_description_and_more.py  0007_taxonomy.py  0008_evaluation_cost_historicalevaluation_cost.py  0008_populate_evaluationdesigntype.py  0008_rsmfile.py  (+7 more)
evaluation_registry/templates/: accessibility-statement.html  base.html  email-sent.html  email_sent.html  evaluation_detail.html  evaluation_list.html  evaluation_upload.html  faq.html  homepage.html  link_sent.html  login-failure.html  login.html  logout.html  macros.html  privacy-notice.html  support.html  unauthorised.html
evaluation_registry/templates/auth/: base.html  login-error.html  login.html
evaluation_registry/templates/email/: verification.txt
evaluation_registry/templates/share-form/: before-start.html  confirm-sharing.html  confirmation.html  evaluation-cost.html  evaluation-create.html  evaluation-dates.html  evaluation-description.html  evaluation-policies.html  evaluation-status.html  evaluation-update-type.html  share-evaluation.html
rsm_csv_files/: test_file.txt
scripts/: README.md  taxonomy_scraper.py
static/: index.js
tests/: __init__.py  conftest.py  rsm-data-2023-07-21.csv  rsm-data-2023-07-21.scsv  test_admin.py  test_authenticated_pages.py  test_authentication.py  test_commands.py  test_filters.py  test_forms.py  test_jinja2.py  test_models.py  test_search.py  test_share_views.py  test_views.py  utils.py
web/: .eslintrc.json  package-lock.json  package.json  vite.config.js
web/src/: autofilter.js  main.js
web/src/style/: autofilter.scss  facet_tags.scss  main.scss
