[tool.black]
line-length = 120
target-version = ['py38']

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true


[tool.poetry]
name = "evaluation-registry"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "evaluation_registry.settings"
env = [
    "DJANGO_SECRET_KEY=1n53cur3K3y",
    "BASE_URL=http://localhost:8020/",
    "POSTGRES_PORT=5432",
    "POSTGRES_DB=evaluation-registry",
    "POSTGRES_USER=evaluation-registry",
    "POSTGRES_PASSWORD=insecure",
    "EMAIL_BACKEND_TYPE=CONSOLE",
    "AWS_REGION_NAME=eu-west-2",
    "COLA_COOKIE_NAME=cookie",
    "COLA_COOKIE_DOMAIN=google.com",
    "COLA_COGNITO_CLIENT_ID=monster",
    "COLA_COGNITO_USER_POOL_ID=omicron",
    "COLA_LOGIN_URL=persei",
     "OPENAI_KEY=vmdvmfdvdm",
]
