[tool.black]
line-length = 120
target-version = ['py38']

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true


[tool.poetry]
name = "evaluation-registry"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
automatilib = ">=1.2.1"
django = "<5.0.0"
django-cors-headers = "^4.3.1"
whitenoise = "^6.6.0"
watchdog = {extras = ["watchmedo"], version = "^3.0.0"}
jinja2 = "^3.1.2"
django-environ = "^0.11.2"
django-allauth = "^0.59.0"
django-use-email-as-username = "^1.4.0"
gunicorn = "^21.2.0"
psycopg2-binary = "^2.9.9"
pyyaml = "^6.0.1"
markdown-it-py = "^3.0.0"
pytz = "^2023.3.post1"
django-csp = "^3.7"
django-permissions-policy = "^4.18.0"
humanize = ">=4.7.0,<4.8.0"
sentry-sdk = "^1.39.1"
boto3 = "^1.34.5"
botocore = "^1.34.5"
django-storages = "^1.14.2"
django-health-check = "^3.17.0"
django-simple-history = "^3.4.0"
openai = "^1.6.0"


[tool.poetry.group.dev.dependencies]
django-extensions = "^3.2.3"
flake8 = "^6.1.0"
flake8-isort = "^6.1.1"
flake8-print = "^5.0.0"
flake8-blind-except = "^0.2.1"
pep8-naming = "^0.13.3"
black = "^23.12.0"
mypy = "^1.7.1"
django-types = "^0.19.1"
types-pytz = "^2023.3.1.1"
bandit = "^1.7.6"
pytest = "^7.4.3"
pytest-django = "^4.7.0"
pytest-env = "^1.1.3"
pytest-cov = "^4.1.0"
django-debug-toolbar = "^4.2.0"
pydot = "^2.0.0"
pyparsing = "^3.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "evaluation_registry.settings"
env = [
    "DJANGO_SECRET_KEY=1n53cur3K3y",
    "BASE_URL=http://localhost:8020/",
    "POSTGRES_PORT=5432",
    "POSTGRES_DB=evaluation-registry",
    "POSTGRES_USER=evaluation-registry",
    "POSTGRES_PASSWORD=insecure",
    "EMAIL_BACKEND_TYPE=CONSOLE",
    "AWS_REGION_NAME=eu-west-2",
    "COLA_COOKIE_NAME=cookie",
    "COLA_COOKIE_DOMAIN=google.com",
    "COLA_COGNITO_CLIENT_ID=monster",
    "COLA_COGNITO_USER_POOL_ID=omicron",
    "COLA_LOGIN_URL=persei",
    "OPENAI_KEY=vmdvmfdvdm",
    "LOGIN_FAILURE_TEMPLATE_PATH=auth/login-error.html",
    "CONTACT_EMAIL=test@example.com",
]
